added pics and wedbsite modded

--- a/Website/files/main.css
+++ b/Website/files/main.css
@@ -233,6 +233,8 @@
 		top: -0.5rem;
 	}
 
+
+
 	blockquote {
 		border-left: solid 4px #ffffff;
 		font-style: italic;
@@ -280,6 +282,14 @@
 	.align-right {
 		text-align: right;
 	}
+
+	.rotate90 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
 
 /* Form */
 
