--- a/Website/files/main.css
+++ b/Website/files/main.css
@@ -72,7 +72,7 @@
 
 	body {
 		/*background: rgba(18, 255, 247, 1); */
-		 background-image: url("rendersexysmall.jpg"); 
+		 background-image: url("top2.jpg"); 
 	}
 	
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after, body.is-switching *, body.is-switching *:before, body.is-switching *:after {
